[package]
name = "toytcp"
version = "0.1.0"
authors = ["komori-n <ikamat.kmr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TCPよりも下層のプロトコル・スタックを扱うためのライブラリ
pnet = "0.27"
anyhow = "1.0"
rand = "0.8"

[dev-dependencies]
ctrlc = "3.1"